--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Counter Application</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- import redux from cdn -->
+    <script src="https://unpkg.com/redux@latest/dist/redux.min.js"></script>
   </head>
   <body>
     <div class="w-screen h-screen p-10 bg-gray-100 text-slate-700">
@@ -16,16 +18,21 @@
 
       <!-- counters -->
       <div class="max-w-md mx-auto mt-10 space-y-5">
-        <div
-          class="p-4 h-auto flex flex-col items-center justify-center space-y-5 bg-white rounded shadow"
-        >
-          <div class="text-2xl font-semibold">0</div>
+        <div id="parent"></div>
+
+        <div class="h-auto bg-transparent flex justify-end">
           <div class="flex space-x-3">
-            <button class="bg-indigo-400 text-white px-3 py-2 rounded shadow">
-              Increment
+            <button
+              id="addCounter"
+              class="bg-indigo-400 text-white px-3 py-2 rounded shadow"
+            >
+              + Add Counter
             </button>
-            <button class="bg-red-400 text-white px-3 py-2 rounded shadow">
-              Decrement
+            <button
+              id="reset"
+              class="bg-red-400 text-white px-3 py-2 rounded shadow"
+            >
+              Reset
             </button>
           </div>
         </div>
